Mapillary (website) no longer zooms in to images
This adds lat, lng, and z params to the URL opened in the browser. It
also fixes some documentation issues.

Signed-off-by: Taylor Smock <tsmock@meta.com>